# MdottyDeEsser

./: CMakeLists.txt  MdottyDeEsser.xml  README.md
.github/workflows/: build.yml
MdottyDeEsserUIData/: MdottyDeEsserDesktop.xml
Source/: DeEsserDSP.h  GainReductionMeter.cpp  GainReductionMeter.h  LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DeEsserProcessor.cpp  DeEsserProcessor.h
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/DSP/: DeEsserEngine.h
